[gd_scene load_steps=19 format=3 uid="uid://pw23d7rpowpn"]

[ext_resource type="Script" path="res://assets/ui/menus/options/options_panels/AudioOptions.gd" id="1_ayowd"]
[ext_resource type="FontFile" uid="uid://lsgrvo3ka24r" path="res://assets/ui/common/default_font.ttf" id="2_u71r7"]
[ext_resource type="Texture2D" uid="uid://cae4cqawq60ws" path="res://assets/ui/menus/common/forms/grabber_25x25.png" id="3_38evr"]
[ext_resource type="Texture2D" uid="uid://00soifco3ucu" path="res://assets/ui/menus/common/forms/check_ticked_25x25.png" id="3_k1xy4"]
[ext_resource type="Texture2D" uid="uid://c54utqv73s3jo" path="res://assets/ui/menus/common/forms/button_100x25_normal.png" id="3_yq57s"]
[ext_resource type="Texture2D" uid="uid://dxoteh2b6rvs0" path="res://assets/ui/menus/common/forms/button_100x25_pressed.png" id="4_4klcv"]
[ext_resource type="Texture2D" uid="uid://duxhk43xpm8rh" path="res://assets/ui/menus/common/forms/check_unticked_25x25.png" id="4_4yu0m"]
[ext_resource type="Texture2D" uid="uid://0wcpekxahibe" path="res://assets/ui/menus/common/forms/input_245x25.png" id="5_pmtpc"]
[ext_resource type="Texture2D" uid="uid://c48sfnhc02m2b" path="res://assets/ui/menus/common/forms/grabber_disabled_25x25.png" id="6_prm48"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nude0"]
bg_color = Color(0.027451, 0.0941176, 0.129412, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3xhco"]
texture = ExtResource("4_4yu0m")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_52eot"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kd1ts"]
texture = ExtResource("5_pmtpc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2r2le"]
texture = ExtResource("5_pmtpc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6gqsq"]
texture = ExtResource("3_yq57s")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_q6vad"]
texture = ExtResource("4_4klcv")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_p3ulq"]
texture = ExtResource("4_4klcv")
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hbgft"]

[node name="AudioOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ayowd")

[node name="Heading" type="Label" parent="."]
layout_mode = 0
offset_left = 170.0
offset_top = 20.0
offset_right = 470.0
offset_bottom = 60.0
theme_override_fonts/font = ExtResource("2_u71r7")
theme_override_font_sizes/font_size = 27
text = "Audio Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OptionsPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 70.0
offset_top = 70.0
offset_right = 570.0
offset_bottom = 330.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nude0")

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 40.0
offset_right = 480.0
offset_bottom = 230.0
theme_override_constants/separation = 0

[node name="Mute" type="HBoxContainer" parent="OptionsPanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="Music" type="Label" parent="OptionsPanel/VBoxContainer/Mute"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u71r7")
theme_override_font_sizes/font_size = 18
text = "Mute music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MuteMusicCheck" type="CheckBox" parent="OptionsPanel/VBoxContainer/Mute"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme_override_icons/checked = ExtResource("3_k1xy4")
theme_override_icons/unchecked = ExtResource("4_4yu0m")
theme_override_styles/normal = SubResource("StyleBoxTexture_3xhco")
theme_override_styles/focus = SubResource("StyleBoxEmpty_52eot")

[node name="Separator" type="Label" parent="OptionsPanel/VBoxContainer/Mute"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Sounds" type="Label" parent="OptionsPanel/VBoxContainer/Mute"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u71r7")
theme_override_font_sizes/font_size = 18
text = "Mute sounds"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MuteSoundsCheck" type="CheckBox" parent="OptionsPanel/VBoxContainer/Mute"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
theme_override_icons/checked = ExtResource("3_k1xy4")
theme_override_icons/unchecked = ExtResource("4_4yu0m")
theme_override_styles/normal = SubResource("StyleBoxTexture_3xhco")
theme_override_styles/focus = SubResource("StyleBoxEmpty_52eot")

[node name="Separator" type="HBoxContainer" parent="OptionsPanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 25)
layout_mode = 2

[node name="MusicVolume" type="HBoxContainer" parent="OptionsPanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="OptionsPanel/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u71r7")
theme_override_font_sizes/font_size = 18
text = "Music volume"

[node name="Separator" type="Label" parent="OptionsPanel/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="MusicVolumeSlider" type="HSlider" parent="OptionsPanel/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(240, 25)
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_38evr")
theme_override_icons/grabber_highlight = ExtResource("3_38evr")
theme_override_icons/grabber_disabled = ExtResource("6_prm48")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_kd1ts")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_2r2le")
max_value = 1.0
step = 0.1

[node name="Separator2" type="HBoxContainer" parent="OptionsPanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 25)
layout_mode = 2

[node name="SoundVolume" type="HBoxContainer" parent="OptionsPanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="OptionsPanel/VBoxContainer/SoundVolume"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u71r7")
theme_override_font_sizes/font_size = 18
text = "Sound volume"

[node name="Separator" type="Label" parent="OptionsPanel/VBoxContainer/SoundVolume"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="SoundVolumeSlider" type="HSlider" parent="OptionsPanel/VBoxContainer/SoundVolume"]
custom_minimum_size = Vector2(240, 25)
layout_mode = 2
theme_override_icons/grabber = ExtResource("3_38evr")
theme_override_icons/grabber_highlight = ExtResource("3_38evr")
theme_override_icons/grabber_disabled = ExtResource("6_prm48")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_kd1ts")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_2r2le")
max_value = 1.0
step = 0.1

[node name="Separator3" type="HBoxContainer" parent="OptionsPanel/VBoxContainer"]
custom_minimum_size = Vector2(400, 25)
layout_mode = 2

[node name="SaveAndExit" type="Button" parent="OptionsPanel/VBoxContainer"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_pressed_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_hover_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_focus_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_hover_pressed_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_disabled_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_colors/font_outline_color = Color(0.027451, 0.0941176, 0.129412, 1)
theme_override_fonts/font = ExtResource("2_u71r7")
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxTexture_6gqsq")
theme_override_styles/hover = SubResource("StyleBoxTexture_q6vad")
theme_override_styles/pressed = SubResource("StyleBoxTexture_p3ulq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hbgft")
text = "Save and Exit"

[connection signal="toggled" from="OptionsPanel/VBoxContainer/Mute/MuteMusicCheck" to="." method="_on_mute_music_check_toggled"]
[connection signal="toggled" from="OptionsPanel/VBoxContainer/Mute/MuteSoundsCheck" to="." method="_on_mute_sounds_check_toggled"]
[connection signal="value_changed" from="OptionsPanel/VBoxContainer/MusicVolume/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="OptionsPanel/VBoxContainer/SoundVolume/SoundVolumeSlider" to="." method="_on_sound_volume_slider_value_changed"]
[connection signal="pressed" from="OptionsPanel/VBoxContainer/SaveAndExit" to="." method="_on_save_and_exit_pressed"]
